# Amot

./: .clang-format  CMakeLists.txt  README.md
amot/: CMakeLists.txt  amot.h
amot/common/: awaiter.h  endian.h  epoller.h  fd_manager.cpp  fd_manager.h  log.h  macro.h  promise.h  queue.h  result.h  scheduler.h  singleton.h  task.h  threadPool.h  util.cpp  util.h  webserver.cpp  webserver.h
amot/coroutine/: awaiter.h  channel.h  executor.h  generator.h  promise.h  scheduler.h  task.h
amot/socket/: address.cpp  address.h  socket.cpp  socket.h
doc/: 思路.md
test/: CMakeLists.txt  unittest.h
test/amot_tests/: test.cpp  test_countchar.cpp  test_generator.cpp  test_task.cpp
test/test_common/: test_scheduler.cpp  test_task.cpp
test/test_log/: test.cpp
test/test_socket/: test_address.cpp  test_socket_client.cpp  test_socket_server.cpp
test/unit_tests/: test_threadpool.cpp
